--- a/angular.json
+++ b/angular.json
@@ -31,7 +31,8 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/leaflet-geosearch/dist/geosearch.css"
             ],
             "scripts": []
           },
@@ -72,7 +73,12 @@
               "browserTarget": "trip-marker:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+          "styles": [
+            "@angular/material/prebuilt-themes/deeppurple-amber.css",
+            "src/styles.scss",
+            "node_modules/leaflet-geosearch/dist/geosearch.css"
+          ]
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
