--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^16.2.0",
     "@types/google.maps": "^3.54.0",
     "@types/googlemaps": "^3.43.3",
+    "file-saver": "^2.0.5",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^3.8.0",
     "rxjs": "~7.8.0",
@@ -32,6 +33,7 @@
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
     "@angular/compiler-cli": "^16.2.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.4",
     "jasmine-core": "~4.6.0",
